--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-color1Trans">
+        <nav class="navbar navbar-expand-lg navbar-light bg-greenMainTrans">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
                     @* //This could be the link to the inicial app page *@
