--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
@@ -1,37 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-a {
-  color: #0077cc;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.icon-Profile{
+    width: 50px;
+    height: 50px;
+    clip-path: circle(50% at 50% 50%);
 }
 
 button.accept-policy {
@@ -45,4 +18,47 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}
+
+.content{
+
+}
+
+.site-bar {
+    border-radius: 0px 10px 10px 0px;
+    border-top-width: 2px;
+    border-top-style: solid;
+    border-right-width: 2px;
+    border-right-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-color: lightgray;
+}
+
+.inline-nav-item {
+    display: flex;
+    width: 234px;
+    align-items: center;
+    gap: 24px;
+    padding: 0px 0px 0px 30px;
+    position: relative;
+    flex: 0 0 auto;
+    background-color: #e7f1ff;
+    border-right-width: 3px;
+    border-right-style: solid;
+    border-color: #00a88f;
+}
+
+
+
+
+.inline-nav-item-nd {
+    display: flex;
+    width: 234px;
+    align-items: center;
+    gap: 10px;
+    padding: 8px 24px 8px 30px;
+    position: relative;
+    flex: 0 0 auto;
+    background-color: #ffffff00;
 }
