added all colors and footer
I added all the colors that we need for the project as well as changind the footer

--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-color1Trans">
+        <nav class="navbar navbar-expand-lg navbar-light bg-greenMainTrans">
             <div class="container-fluid align-middle">
                 <div class="align-middle">
                     <a class="navbar-brand" asp-area="" asp-page="/Index">
@@ -73,7 +73,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - CancherksWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            Correo: example@itcr.ac.cr Teléfono: 2020-2020 
         </div>
     </footer>
 
