--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="icon-Profile bg-color2 text-center align-middle fs-3 text-white">
+                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white">
                     <i class="bi bi-person"></i>
                 </div>
 
@@ -48,21 +48,21 @@
     </header>
        
 
-    <div class="mh-100 d-flex flex-row">
-        <aside class="site-bar h-100 mh-100">
+    <div class="page d-flex flex-row bg-grayContrast">
+        <aside class="site-bar bg-white">
             <ul class="d-flex flex-column gap-3 px-0 py-2">
                 <li class="py-2 inline-nav-item ">
                     <i class="bi bi-people-fill"></i>
                     Instalaciones
                 </li>
-                <li class="py-2 inline-nav-item-nd">
+                <li class="py-2 bg-footer inline-nav-item-nd">
                     <i class="bi bi-people-fill"></i>
                     Instalaciones
                 </li>
             </ul>
            
         </aside>
-        <div class="container">
+        <div class="content-page w-100">
             <main role="main" class="pb-3">
 
 
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted ">
         <div class="container">
             Correo: example@itcr.ac.cr Teléfono: 2020-2020 
         </div>
