--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -2,7 +2,9 @@
 :root {
     --greenMain: #00A38B;
     --greenMainRGB: 0, 163, 139;
+    --greenMainTrans: rgba(0, 163, 139, 0.1);
     --greyFooter: #F1F1F1;
+    --whiteContranst: #F6F6F6;
     --greyFooterRGB: 241,241,241;
     --textGrey: #495057;
     --textGreyRGB: 73, 80, 87;
@@ -27,6 +29,8 @@
     --gradient: linear-gradient(to right, rgba(49, 156, 214, 1) 0%, rgba(61, 192, 201, 1) 100%);
     --gradient2: linear-gradient(61deg, rgba(87, 204, 223, 1) 0%, rgba(71, 115, 217, 1) 100%);
     --font-primary: 'Roboto', sans-serif;
+    --navMaxHeight: 85px;
+    --footerMaxHeigth: 50px;
 }
 
 
@@ -50,7 +54,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  height: 100%;
+  margin: 0;
 }
 
 img {
@@ -63,7 +68,7 @@ img {
 
 .bg-greenMain {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--greenMainRGB), var(--bs-bg-opacity)) !important;
+    background-color: rgba(var(--greenMainRGB), var(--bs-bg-opacity));
 }
 
 
@@ -71,41 +76,46 @@ img {
 
 .bg-greenMainTrans {
     --bs-bg-opacity: 0.1;
-    background-color: rgba(var(--greenMainRGB), var(--bs-bg-opacity)) !important;
+    background-color: rgba(var(--greenMainRGB), var(--bs-bg-opacity));
+}
+
+.bg-grayContrast{
+    background-color: var(--whiteContranst);
+}
+
+.bg-footer{
+    background-color: var(--greyFooter);
 }
 
 /* This secction is for color for texts*/
 
 .txt-Grey {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--textGreyRGB), var(--bs-bg-opacity)) !important;
+    background-color: rgba(var(--textGreyRGB), var(--bs-bg-opacity));
 }
 
 .txt-Green {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--textGreyRGB), var(--bs-bg-opacity)) !important;
+    background-color: rgba(var(--textGreyRGB), var(--bs-bg-opacity));
 }
 
 /* Header text format */
-.nav-link.active {
-    color: var(--textGrey) !important;
-    font-weight: bold !important;
-}
-
 .nav-link {
-    color: var(--textGrey) !important;
-    font-weight: lighter !important;
+    color: var(--textGrey) !important; /* This important would be unnecessary, but if we remove doesn't work, Why ? I don't know but I don't care*/
+    font-weight: lighter;
 }
 
+.active {
+    font-weight: bold;
+}
 
 .nav-link:hover {
-    color: var(--textGrey) !important;
-    font-weight: bold !important;
+    font-weight: bold;
 }
 
 /* Footer format */
 .footer {
-    background-color: var(--greyFooter) !important;
+    background-color: var(--greyFooter);
 }
 
 .footer.text-muted .container {
@@ -115,666 +125,3 @@ img {
 }
 
 
-
-.ver-perfil {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-}
-
-    .ver-perfil .div {
-        background-color: #ffffff;
-        overflow: hidden;
-        width: 1320px;
-        height: 864px;
-        position: relative;
-    }
-
-    .ver-perfil .overlap-group {
-        position: absolute;
-        width: 1322px;
-        height: 778px;
-        top: 86px;
-        left: -2px;
-    }
-
-    .ver-perfil .footer {
-        position: absolute;
-        width: 1322px;
-        height: 50px;
-        top: 728px;
-        left: 0;
-        background-color: #6a6a6a1a;
-    }
-
-    .ver-perfil .contacto-correo {
-        position: absolute;
-        width: 391px;
-        height: 20px;
-        top: 10px;
-        left: 466px;
-        font-family: "Roboto-Thin", Helvetica;
-        font-weight: 100;
-        color: #000000;
-        font-size: 16px;
-        text-align: center;
-        letter-spacing: 0;
-        line-height: 24px;
-        white-space: nowrap;
-    }
-
-    .ver-perfil .content-page {
-        width: 1320px;
-        align-items: center;
-        gap: 10px;
-        padding: 124px 50px;
-        position: absolute;
-        top: 0;
-        left: 2px;
-        background-color: #f6f6f6;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .ver-perfil .container {
-        display: flex;
-        flex-direction: column;
-        width: 1125px;
-        height: 487px;
-        align-items: flex-start;
-        gap: 14px;
-        padding: 0px 10px;
-        position: relative;
-    }
-
-    .ver-perfil .text-wrapper {
-        position: relative;
-        width: 961px;
-        height: 38px;
-        margin-top: -1px;
-        font-family: "Roboto-Bold", Helvetica;
-        font-weight: 700;
-        color: #212529;
-        font-size: 32px;
-        letter-spacing: 0;
-        line-height: 38.4px;
-        white-space: nowrap;
-    }
-
-    .ver-perfil .frame {
-        display: flex;
-        width: 1115px;
-        height: 305px;
-        align-items: flex-start;
-        padding: 10px 1px;
-        position: relative;
-        margin-right: -10px;
-    }
-
-    .ver-perfil .card {
-        width: 683px;
-        height: 282px;
-        align-items: flex-start;
-        padding: 10px;
-        background-color: #ffffff;
-        border-radius: 10px;
-        overflow: hidden;
-        border: 0px none;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        border-color: var(--componentscardborder);
-    }
-
-    .ver-perfil .wrapper {
-        display: flex;
-        align-items: flex-start;
-        align-self: stretch;
-        width: 100%;
-        margin-bottom: -10px;
-        border-radius: 20px;
-        position: relative;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .image {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: flex-start;
-        position: relative;
-        align-self: stretch;
-        flex: 0 0 auto;
-        border-radius: 10px;
-    }
-
-    .ver-perfil .image-2 {
-        display: flex;
-        width: 100%;
-        overflow: hidden;
-        flex-direction: column;
-        align-items: flex-start;
-        position: relative;
-        align-self: stretch;
-        flex: 0 0 auto;
-        border-radius: 10px;
-    }
-
-    .ver-perfil .aspect-ratio-keeper {
-        display: flex;
-        height: 260px;
-        align-items: flex-start;
-        position: relative;
-        align-self: stretch;
-        width: 100%;
-        transform: rotate(-45deg);
-    }
-
-    .ver-perfil .aspect-ratio-keeper-2 {
-        position: relative;
-        align-self: stretch;
-        flex: 0 0 auto;
-        margin-top: -1px;
-        margin-bottom: -1px;
-        transform: rotate(24.47deg);
-    }
-
-    .ver-perfil .image-placeholder {
-        position: absolute;
-        width: 260px;
-        height: 260px;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-    }
-
-    .ver-perfil .size-adjuster {
-        display: inline-flex;
-        align-items: center;
-        gap: 260px;
-        position: relative;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .ignore {
-        position: relative;
-        width: 1px;
-        height: 1px;
-    }
-
-    .ver-perfil .ignore-2 {
-        margin-right: -1px;
-        position: relative;
-        width: 1px;
-        height: 1px;
-    }
-
-    .ver-perfil .content {
-        align-items: flex-start;
-        position: relative;
-        flex: 1;
-        flex-grow: 1;
-        background-color: #ffffff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .ver-perfil .card-body {
-        align-items: flex-start;
-        gap: 1px;
-        padding: 16px;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-    }
-
-    .ver-perfil .div-wrapper {
-        align-items: flex-start;
-        justify-content: center;
-        padding: 0px 0px 8px;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-    }
-
-    .ver-perfil .text {
-        position: relative;
-        align-self: stretch;
-        margin-top: -1px;
-        font-family: "Roboto-Medium", Helvetica;
-        font-weight: 500;
-        color: #212529;
-        font-size: 16px;
-        letter-spacing: 0;
-        line-height: 24px;
-    }
-
-    .ver-perfil .text-2 {
-        position: relative;
-        align-self: stretch;
-        margin-top: -1px;
-        font-family: "Helvetica Neue-65Medium", Helvetica;
-        font-weight: 500;
-        color: #6c757d;
-        font-size: 16px;
-        letter-spacing: 0;
-        line-height: 19.2px;
-    }
-
-    .ver-perfil .card-text {
-        align-items: flex-start;
-        padding: 0px 0px 6px;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-    }
-
-    .ver-perfil .text-3 {
-        position: relative;
-        align-self: stretch;
-        margin-top: -1px;
-        font-family: "Roboto-Light", Helvetica;
-        font-weight: 300;
-        color: #212529;
-        font-size: 15px;
-        letter-spacing: 0;
-        line-height: 22.5px;
-    }
-
-    .ver-perfil .min-width-change {
-        display: inline-flex;
-        align-items: center;
-        gap: 400px;
-        position: relative;
-        flex: 0 0 auto;
-        margin-bottom: -1px;
-        margin-right: -29px;
-        overflow: hidden;
-    }
-
-    .ver-perfil .layout-blocks {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        gap: 16px;
-        padding: 0px 0px 5px;
-        position: relative;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .div-wrapper-2 {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        position: relative;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-    }
-
-    .ver-perfil .wrapper-2 {
-        display: inline-flex;
-        align-items: center;
-        gap: 8px;
-        position: relative;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .icon-left {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-    }
-
-    .ver-perfil .width-change-size {
-        display: inline-flex;
-        align-items: center;
-        gap: 16px;
-        position: relative;
-        flex: 0 0 auto;
-        overflow: hidden;
-    }
-
-    .ver-perfil .icon-wrapper-h {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        flex: 0 0 auto;
-        position: relative;
-        align-self: stretch;
-    }
-
-    .ver-perfil .height-change-size {
-        display: inline-flex;
-        align-items: center;
-        gap: 16px;
-        position: relative;
-        flex: 0 0 auto;
-        margin-left: -8px;
-        overflow: hidden;
-        transform: rotate(-90deg);
-    }
-
-    .ver-perfil .icon-wrapper {
-        position: relative;
-        flex: 1;
-        align-self: stretch;
-        flex-grow: 1;
-    }
-
-    .ver-perfil .union {
-        position: absolute;
-        width: 16px;
-        height: 12px;
-        top: 2px;
-        left: 0;
-    }
-
-    .ver-perfil .text-4 {
-        position: relative;
-        width: fit-content;
-        margin-top: -1px;
-        font-family: "Roboto-Medium", Helvetica;
-        font-weight: 500;
-        color: #00a88f;
-        font-size: 16px;
-        letter-spacing: 0;
-        line-height: 24px;
-        white-space: nowrap;
-    }
-
-    .ver-perfil .icon-wrapper-h-2 {
-        background-color: #ffffff;
-        display: flex;
-        align-items: center;
-        position: relative;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .icon-wrapper-2 {
-        flex: 1;
-        flex-grow: 1;
-        background-image: url(./img/image.svg);
-        background-size: 100% 100%;
-        position: relative;
-        align-self: stretch;
-    }
-
-    .ver-perfil .button-list {
-        align-items: center;
-        gap: 8px;
-        padding: 35px 0px;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-        display: flex;
-        position: relative;
-    }
-
-    .ver-perfil .button {
-        align-items: flex-end;
-        justify-content: center;
-        gap: 10px;
-        padding: 3px 0px;
-        flex: 1;
-        flex-grow: 1;
-        border-radius: 5px;
-        overflow: hidden;
-        background: linear-gradient(180deg, rgb(4, 141, 140) 0%, rgb(22, 193, 181) 100%);
-        display: flex;
-        position: relative;
-        all: unset;
-        box-sizing: border-box;
-    }
-
-    .ver-perfil .text-5 {
-        position: relative;
-        width: fit-content;
-        margin-top: -1px;
-        font-family: "Roboto-Regular", Helvetica;
-        font-weight: 400;
-        color: #ffffff;
-        font-size: 16px;
-        letter-spacing: 0;
-        line-height: 24px;
-        white-space: nowrap;
-    }
-
-    .ver-perfil .grid-installations {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        gap: 13px 10px;
-        padding: 0px 10px;
-        position: relative;
-        flex: 1;
-        flex-grow: 1;
-    }
-
-    .ver-perfil .card-2 {
-        width: 180px;
-        height: 130px;
-        align-items: flex-start;
-        padding: 5px;
-        background-color: #ffffff;
-        border-radius: 10px;
-        overflow: hidden;
-        border: 0px none;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        border-color: var(--componentscardborder);
-    }
-
-    .ver-perfil .wrapper-3 {
-        display: flex;
-        align-items: flex-start;
-        align-self: stretch;
-        width: 100%;
-        margin-bottom: -5px;
-        border-radius: 20px;
-        position: relative;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .card-body-2 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1px;
-        padding: 16px;
-        position: relative;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-    }
-
-    .ver-perfil .card-title {
-        align-items: center;
-        justify-content: center;
-        padding: 0px 0px 8px;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-        background-color: #ffffff00;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-    }
-
-    .ver-perfil .text-6 {
-        position: relative;
-        align-self: stretch;
-        margin-top: -1px;
-        font-family: "Roboto-Medium", Helvetica;
-        font-weight: 500;
-        color: #212529;
-        font-size: 40px;
-        letter-spacing: 0;
-        line-height: 60px;
-    }
-
-    .ver-perfil .min-width-change-2 {
-        display: inline-flex;
-        align-items: center;
-        gap: 400px;
-        position: relative;
-        flex: 0 0 auto;
-        margin-bottom: -1px;
-        margin-right: -262px;
-        overflow: hidden;
-    }
-
-    .ver-perfil .p {
-        position: relative;
-        width: 987px;
-        height: 44px;
-        font-family: "Helvetica Neue-Light", Helvetica;
-        font-weight: 300;
-        color: #000000;
-        font-size: 16px;
-        text-align: center;
-        letter-spacing: 0;
-        line-height: 24px;
-    }
-
-    .ver-perfil .header {
-        position: absolute;
-        width: 1320px;
-        height: 86px;
-        top: 0;
-        left: 0;
-        background-color: transparent;
-    }
-
-    .ver-perfil .navbar-default {
-        display: flex;
-        width: 1320px;
-        height: 86px;
-        align-items: center;
-        padding: 8px 20px;
-        position: relative;
-        background-color: #00a88f1a;
-    }
-
-    .ver-perfil .app-logo {
-        position: relative;
-        width: 64px;
-        height: 64px;
-        background-image: url(./img/app-logo.svg);
-        background-size: 100% 100%;
-    }
-
-    .ver-perfil .components-navbar {
-        display: flex;
-        align-items: center;
-        position: relative;
-        flex: 1;
-        flex-grow: 1;
-        background-color: #ffffff00;
-    }
-
-    .ver-perfil .avatar {
-        display: flex;
-        flex-direction: column;
-        width: 64px;
-        height: 64px;
-        align-items: flex-end;
-        position: relative;
-        background-color: var(--gray-500);
-        border-radius: 999px;
-    }
-
-    .ver-perfil .width-change-size-2 {
-        gap: 64px;
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        overflow: hidden;
-    }
-
-    .ver-perfil .icon-wrapper-h-3 {
-        justify-content: center;
-        display: flex;
-        align-items: center;
-        position: relative;
-        align-self: stretch;
-        width: 100%;
-        flex: 0 0 auto;
-    }
-
-    .ver-perfil .height-change-size-2 {
-        gap: 64px;
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        margin-left: -16px;
-        overflow: hidden;
-        transform: rotate(-90deg);
-    }
-
-    .ver-perfil .icon-wrapper-3 {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        background-color: var(--hitbox);
-    }
-
-    .ver-perfil .width-change-size-3 {
-        gap: 32px;
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        overflow: hidden;
-    }
-
-    .ver-perfil .height-change-size-3 {
-        gap: 32px;
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        flex: 0 0 auto;
-        margin-left: -16px;
-        overflow: hidden;
-        transform: rotate(-90deg);
-    }
-
-    .ver-perfil .img {
-        position: absolute;
-        width: 24px;
-        height: 24px;
-        top: 4px;
-        left: 4px;
-    }
