--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
@@ -1,30 +1,21 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-.icon-Profile{
+.icon-Profile {
     width: 50px;
     height: 50px;
     clip-path: circle(50% at 50% 50%);
+    background-color: #ACB4BC;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.navbar {
+    max-height: var(--navMaxHeight);
+    height: var(--navMaxHeight);
 }
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px;
-    color: #F1F1F1;
+.page {
+    height: calc(100% - var(--navMaxHeight) - var(--footerMaxHeigth));
+    overflow: hidden;
 }
-
-.content{
-
-}
-
 .site-bar {
     border-radius: 0px 10px 10px 0px;
     border-top-width: 2px;
@@ -33,8 +24,13 @@ button.accept-policy {
     border-right-style: solid;
     border-bottom-width: 2px;
     border-bottom-style: solid;
-    border-color: lightgray;
+    border-color: var(--greenMainTrans);
 }
+
+.content-page {
+    overflow-y: auto; /* Scrollable content */
+}
+
 
 .inline-nav-item {
     display: flex;
@@ -50,9 +46,6 @@ button.accept-policy {
     border-color: #00a88f;
 }
 
-
-
-
 .inline-nav-item-nd {
     display: flex;
     width: 234px;
@@ -62,4 +55,13 @@ button.accept-policy {
     position: relative;
     flex: 0 0 auto;
     background-color: #ffffff00;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--greyFooter);
+    height:100%;
+    max-height: var(--footerMaxHeigth);
 }
