--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml.css
@@ -24,7 +24,7 @@ for details on configuring this project to bundle and minify static web assets. 
     border-right-style: solid;
     border-bottom-width: 2px;
     border-bottom-style: solid;
-    border-color: var(--greenMainTrans);
+    border-color: var(--colorMainTrans);
 }
 
 .content-page {
@@ -43,7 +43,7 @@ for details on configuring this project to bundle and minify static web assets. 
     background-color: #e7f1ff;
     border-right-width: 3px;
     border-right-style: solid;
-    border-color: #00a88f;
+    border-color: var(--colorMain);
 }
 
 .inline-nav-item-nd {
