--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Cancherks</title>
+    <title>@ViewData["Title"]  Cancherks</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
@@ -27,6 +27,9 @@
                         var option1IsActive = Context.Request.Path.Value.Contains("/Option1");
                         var option2IsActive = Context.Request.Path.Value.Contains("/Option2");
                         var option3IsActive = Context.Request.Path.Value.Contains("/Option3");
+                        var requestManagementIsActive = Context.Request.Path.Value.Contains("/Admin/GestionSolicitudes");
+                        
+
                     }
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -38,6 +41,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(option3IsActive ? "active" : "")" asp-area="" asp-page="/Option3">Option3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion</a>
                         </li>
                     </ul>
                 </div>
