--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -124,4 +124,25 @@ img {
     font-weight: lighter;
 }
 
+/* Dropdown format */
+.custom-dropdown-button {
+    background-color: transparent !important; 
+    color: #00A38B !important; 
+    border: 1px solid #00A38B; 
+    width: 175px;
+}
+
+.custom-dropdown-button:hover {
+    background-color: var(--colorMainTrans) !important;
+}
+
+.custom-dropdown-item {
+    color: black !important; 
+}
+
+.custom-dropdown-item:hover {
+    color: #00A38B !important; 
+}
+
+
 
