--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,11 @@
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CancherksWebApp.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-colorMainTrans">
@@ -21,14 +25,15 @@
                         Cancherks
                     </a>
                 </div>
-               
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     @{
                         var option1IsActive = Context.Request.Path.Value.Contains("/Option1");
                         var option2IsActive = Context.Request.Path.Value.Contains("/Option2");
                         var option3IsActive = Context.Request.Path.Value.Contains("/Option3");
                         var requestManagementIsActive = Context.Request.Path.Value.Contains("/Admin/GestionSolicitudes");
-                        
+                        var reportManagementIsActive = Context.Request.Path.Value.Contains("/Admin/Reportes");
+
 
                     }
 
@@ -43,7 +48,10 @@
                             <a class="nav-link @(option3IsActive ? "active" : "")" asp-area="" asp-page="/Option3">Option3</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion</a>
+                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion Solicitudes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
                         </li>
                     </ul>
                 </div>
@@ -56,7 +64,7 @@
             </div>
         </nav>
     </header>
-       
+
 
     <div class="page d-flex flex-row bg-grayContrast">
         <aside class="site-bar bg-white">
@@ -70,7 +78,7 @@
                     Instalaciones
                 </li>
             </ul>
-           
+
         </aside>
         <div class="content-page w-100">
             <main role="main" class="pb-3">
@@ -83,15 +91,19 @@
 
     <footer class="border-top footer text-muted ">
         <div class="container">
-            Correo: example@itcr.ac.cr Teléfono: 2020-2020 
+            Correo: example@itcr.ac.cr Teléfono: 2020-2020
         </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script> 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
 
-  
+
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
