Table format ready
All the columns are ready, the data in the table still has to be loaded dinamically

--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -5,7 +5,7 @@
 
 <section class="container px-5 py-3">
     <h3 style="margin-bottom: 2rem;">Reportes</h3>
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center py-3">
        
         <dropdown class="dropdown me-3">
             
@@ -55,36 +55,63 @@
     <table class="table" style="margin-top: 1rem;">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Elegir</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido 1</th>
+                <th scope="col">Apellido 2</th>
+                <th scope="col">Carné</th>
+                <th scope="col">Correo</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Hora Inicio</th>
+                <th scope="col">Hora Final</th>
+                <th scope="col">Actividad</th>
+                <th scope="col">Estado</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td><input type="checkbox" class="custom-checkbox" name="select1" value="1"></td>
+                <td>María Fernanda</td>
+                <td>Murillo</td>
+                <td>Mena</td>
+                <td>2021077803</td>
+                <td>fermurillo04@estudiantec.cr</td>
+                <td>10/04/2023</td>
+                <td>10:00 am</td>
+                <td>12:00 pm</td>
+                <td>Correr</td>
+                <td>Pendiente</td>
 
             </tr>
             <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
+                <td><input type="checkbox" name="select1" value="1"></td>
+                <td>María Fernanda</td>
+                <td>Murillo</td>
+                <td>Mena</td>
+                <td>2021077803</td>
+                <td>fermurillo04@estudiantec.cr</td>
+                <td>10/04/2023</td>
+                <td>10:00 am</td>
+                <td>12:00 pm</td>
+                <td>Correr</td>
+                <td>Pendiente</td>
 
             </tr>
             <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
+                <td><input type="checkbox" name="select1" value="1"></td>
+                <td>María Fernanda</td>
+                <td>Murillo</td>
+                <td>Mena</td>
+                <td>2021077803</td>
+                <td>fermurillo04@estudiantec.cr</td>
+                <td>10/04/2023</td>
+                <td>10:00 am</td>
+                <td>12:00 pm</td>
+                <td>Correr</td>
+                <td>Pendiente</td>
 
             </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Vinh</td>
-                <td>Bui</td>
-
-            </tr>
+            
         </tbody>
     </table>
 
