--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -202,6 +202,10 @@ img {
 }
 
 /* Estilo para el checkbox personalizado */
+#reporte .modal-footer .button-color {
+    background-color: var(--colorMain) !important;
+    /* Otros estilos si es necesario */
+}
 
 
 
