small correction header
small correction header

--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CancherksWebApp.styles.css" asp-append-version="true" />
 
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> <!-- For the datepicker -->
 
 </head>
 
@@ -22,6 +22,7 @@
                     <a class="navbar-brand" asp-area="" asp-page="/Index">
                         @* //This could be the link to the inicial app page *@
                         <i class="bi bi-mortarboard-fill"></i>
+
                         Cancherks
                     </a>
                 </div>
@@ -51,7 +52,7 @@
                             <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion Solicitudes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
+                            <a class="nav-link @(reportManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
                         </li>
                     </ul>
                 </div>
@@ -98,8 +99,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script> 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> <!-- For the datepicker -->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For the datepicker -->
     
 
 
